--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ p {
   --address-footer: rgba(255, 255, 255, 0.6);
   --background-hero: #2f303a;
   --background-team: #f5f4fa;
+  --icon-color: #afb1b8;
 }
 
 body {
@@ -85,6 +86,8 @@ body {
 
 .contacts-nav {
   display: flex;
+  justify-content: center;
+  align-items: center;
   margin-left: auto;
 }
 
@@ -134,6 +137,29 @@ body {
 
 .address-link {
   color: var(--primary-text-gray);
+  /* display: flex; */
+}
+
+.mail::before {
+  content: "";
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  width: 16px;
+  height: 12px;
+  background-image: url(../images/icons/envelope.svg);
+}
+
+.tel::before {
+  content: "";
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  width: 10px;
+  height: 16px;
+  background-image: url(../images/icons/smartphone.svg);
 }
 
 .section {
@@ -142,7 +168,7 @@ body {
 
 .hero {
   color: var(--white);
-  background-color: var(--background-hero);
+  /* background-color: var(--background-hero); */
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -151,6 +177,16 @@ body {
   align-items: center;
 }
 
+.hero-bg {
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url(../images/hero/hero-bg.jpg);
+  box-shadow: rgba(47, 48, 58, 0.7);
+  background-repeat: no-repeat;
+}
 .hero-title {
   font-weight: 900;
   font-size: 44px;
@@ -187,6 +223,22 @@ body {
 
 .feature-list {
   display: flex;
+}
+
+.feature-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  width: 270px;
+  height: 120px;
+  background-color: var(--background-team);
+  margin-bottom: 30px;
+}
+
+.feature-svg {
+  width: 70px;
+  height: 70px;
 }
 
 .feature-list .item {
@@ -270,6 +322,72 @@ body {
   font-weight: normal;
   color: var(--primary-text-gray);
   margin-top: 10px;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 30px;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.social-icons-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-icons-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: var(--white);
+  border-radius: 50%;
+}
+
+.social-icons-svg {
+  width: 20px;
+  height: 20px;
+  fill: var(--icon-color);
+}
+
+.social-icons-link:hover,
+.social-icons-link:focus,
+.social-icons-svg:hover,
+.social-icons-svg:focus {
+  background-color: var(--text-accent);
+  fill: var(--white);
+}
+
+/* .social-icons-svg:hover,
+.social-icons-svg:focus {
+  fill: var(--white);
+  background-color: var(--text-accent);
+} */
+
+.clients {
+  display: flex;
+  padding-bottom: 94px;
+}
+
+.clients .item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-width: 1px;
+  background-color: var(--icon-color);
+  width: 170px;
+  height: 90px;
+}
+
+.clients-svg {
+  width: 45px;
+  height: 50px;
 }
 
 .footer {
