--- a/css/styles-studio.css
+++ b/css/styles-studio.css
@@ -287,3 +287,65 @@ img {
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
 }
+
+.flex-footer {
+  display: flex;
+}
+
+.addresses {
+  width: 231px;
+}
+
+.join-us {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  margin-left: 70px;
+  width: 206px;
+}
+
+.join-section {
+  margin-bottom: 20px;
+  color: var(--white);
+
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 30px;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.social-icons-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-icons-link-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+
+.social-icons-svg-footer {
+  width: 20px;
+  height: 20px;
+  fill: var(--white);
+}
+
+.social-icons-link-footer:hover .social-icons-svg,
+.social-icons-link-footer:hover,
+.social-icons-link-footer:focus .social-icons-svg,
+.social-icons-link-footer:focus {
+  background-color: var(--text-accent);
+}
