--- a/css/styles.css
+++ b/css/styles.css
@@ -436,19 +436,42 @@ body {
 
 .join-us {
   display: flex;
-
+  flex-direction: column;
   align-items: left;
-  padding-top: 72px;
-  margin-right: 70px;
+  margin-left: 70px;
   width: 206px;
 }
 
 .join-section {
+  margin-bottom: 20px;
+  color: var(--white);
+
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--white);
-  margin-bottom: 20px;
+}
+
+.social-icons-link-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+
+.social-icons-svg-footer {
+  width: 20px;
+  height: 20px;
+  fill: var(--white);
+}
+
+.social-icons-link-footer:hover .social-icons-svg,
+.social-icons-link-footer:hover,
+.social-icons-link-footer:focus .social-icons-svg,
+.social-icons-link-footer:focus {
+  background-color: var(--text-accent);
 }
