--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,7 @@ body {
     ),
     url(../images/hero/hero-bg.jpg);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 .hero-title {
   font-weight: 900;
@@ -308,6 +309,7 @@ body {
   color: var(--primary-text-black);
   background-color: var(--white);
   border: 1px solid transparent;
+  box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .team-item:not(:last-child) {
