--- a/css/styles-studio.css
+++ b/css/styles-studio.css
@@ -187,8 +187,9 @@ img {
 
 .options {
   display: flex;
-  padding-left: 295px;
-  padding-right: 295px;
+  padding-left: auto;
+  padding-right: auto;
+
   margin-bottom: 34px;
   align-items: center;
   justify-content: center;
@@ -199,14 +200,15 @@ img {
 }
 
 .options-button {
-  display: inline-block;
+  display: inline-flex;
   color: var(--primary-text-black);
   background-color: var(--background-button);
   text-align: center;
-
+  align-items: center;
   padding: 6px 22px;
-  min-width: 128px;
+
   border: 1px solid transparent;
+  border-radius: 4px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -235,6 +237,10 @@ img {
   justify-content: space-between;
   align-items: center;
   border: 1px solid var(--section-border);
+}
+
+.flex-element:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .flex-element .item-title {
